Restructure the backend code
