# backend/api/api-spec.yml
@@ -27,7 +27,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/NewUserResponse'
         default:
           description: unexpected error
           content:
@@ -45,22 +45,78 @@ paths:
           description: ID of user
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '200':
           description: User profile response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/NewUserResponse'
         default:
           description: unexpected error
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-                
+  
+  /user/{userid}/changepassword/verification-code:
+    put:
+      tags:
+        - User
+      operationId: generateVerificationCode
+      parameters:
+        - name: userid
+          in: path
+          description: ID of user
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestGenerateVerificationCode'
+      responses:
+        '200':
+          description: OK
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        
+
+  /user/{userid}/changepassword:
+    put:
+      tags:
+        - User
+      operationId: changeUserPassword
+      parameters:
+        - name: userid
+          in: path
+          description: ID of user
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestChangePassword'
+      responses:
+        '200':
+          description: OK
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /user/{userid}/checkin:
     post:
       tags:
@@ -72,8 +128,7 @@ paths:
           description: ID of user
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '200':
           description: OK
@@ -95,8 +150,7 @@ paths:
           description: ID of user
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '200':
           description: OK
@@ -109,19 +163,23 @@ paths:
           
 components:
   schemas:
-    User:
+    NewUserResponse:
       allOf:
         - type: object
-          required:
-            - id
           properties:
-            id:
-              type: integer
-              format: int64
+            userId:
+              type: string
+            temporaryPassword:
+              type: string
         - $ref: '#/components/schemas/NewUser'
 
     NewUser:
       type: object
+      required:
+        - firstName
+        - lastName
+        - email
+        - mobileNumber
       properties:
         firstName:
           type: string
@@ -129,10 +187,43 @@ components:
             validate: required,min=2,max=50
         lastName:
           type: string
-        dob:
+        email:
           type: string
           x-oapi-codegen-extra-tags:
-            validate: required,min=2,max=30
+            validate: email
+        mobileNumber:
+          type: string
+          x-oapi-codegen-extra-tags:
+            validate: required,min=6,max=20
+
+    RequestGenerateVerificationCode:
+      type: object
+      required:
+        - channel
+      properties:
+        channel:
+          type: string
+          enum: [mobile, email] 
+
+    RequestChangePassword:
+      type: object
+      required:
+        - oldpassword
+        - newpassword
+        - verificationCode
+      properties:
+        oldpassword:
+          type: string
+          x-oapi-codegen-extra-tags:
+              validate: required
+        newpassword:
+          type: string
+          x-oapi-codegen-extra-tags:
+              validate: required,min=8, max=30
+        verificationCode:
+          type: string
+          x-oapi-codegen-extra-tags:
+              validate: required,min=6
 
     Error:
       type: object
